[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"
skip_glob = ["caching-decorator/__init__.py"]

[tool.poetry]
authors = ["Sebatian Prillo <sprillo@berkeley.edu>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9"
]
description = "Caching decorator to store results of functions using pickle."
homepage = "https://github.com/yoseflab/caching-decorator"
license = "MIT"
name = "caching-decorator"
packages = [
  {include = "caching-decorator"},
]
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
typing-extensions = "^4.2.0"

[tool.poetry.dev-dependencies]
black = ">=20.8b1"
flake8 = ">=3.7.7"
isort = ">=5.7"
pre-commit = ">=2.7.1"
pytest = ">=4.4"
pytest-cov = "*"

[build-system]
build-backend = "poetry.masonry.api"
requires = [
  "poetry>=1.0",
  "setuptools", # keep it here or "pip install -e" would fail
]